--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@ body {
     background-color: #fff3f3;
 }
 
+header {
+    position: sticky;
+    top: 0;
+    background-color: #fff3f3;
+    box-shadow: 0px 0px 5px -4px black;
+    z-index: 200;
+}
+
 .menu {
     /* border: 1px solid red; */
 }
@@ -26,6 +34,7 @@ body {
 .logo {
     color: violet;
     font-size: 3.5em;
+    z-index: 101;
 }
 
 .hambuerger-btn {
@@ -45,11 +54,11 @@ body {
 .menu {
     background: #000000bf;
     position: fixed;
-    top: 0;
+    top: 85px;
     left: 0;
     right: 0;
     bottom: 0;
-    height: 100vh;
+    height: 85vh;
     z-index: 100;
     transform: translateY(-800px);
     transition: all .5s;
